<resources>
    <string name="app_name">Book Store</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <string name="product_details">Product details</string>
    <string name="hint_product_name">Product name</string>
    <string name="hint_price">Price</string>
    <string name="unit_product_price">€</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_author">Author</string>
    <string name="hint_product_supplier_name">Supplier name</string>
    <string name="hint_product_supplier_phone_number">Supplier phone number</string>


</resources>
