<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin16"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/product_details"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/padding4"
            android:orientation="vertical">

            <!-- Product name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/padding4">
                <!-- Breed field -->

                <EditText
                    android:id="@+id/edit_product_price"
                    android:hint="@string/hint_price"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />

                <!-- Units for weight (kg) -->
                <TextView
                    android:id="@+id/label_price_unit"
                    android:text="@string/unit_product_price"
                    style="@style/EditorUnitsStyle"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/edit_product_author"
                android:hint="@string/hint_product_author"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/edit_product_supplier_name"
                android:hint="@string/hint_product_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/edit_product_supplier_phone_number"
                android:hint="@string/hint_product_supplier_phone_number"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>




</LinearLayout>